# pareto-screen

./: .gitignore  README.md  pyproject.toml
src/pareto_screen/: __init__.py  __main__.py  benchmark.py  types.py
src/pareto_screen/baselines/: greedy.py  pareto_ranking.py  random.py
src/pareto_screen/bo/: acquisition.py  optimizer.py  pareto.py  selector.py  surrogate.py
src/pareto_screen/data/: chembl.py  dataset.py  featurizer.py  properties.py
src/pareto_screen/evaluation/: benchmark.py  metrics.py  oracle.py
tests/: conftest.py  test_types.py
tests/baselines/: test_greedy.py  test_pareto_ranking.py  test_random.py
tests/bo/: test_acquisition.py  test_optimizer.py  test_pareto.py  test_selector.py  test_surrogate.py
tests/data/: test_chembl.py  test_dataset.py  test_featurizer.py  test_properties.py
tests/evaluation/: test_benchmark.py  test_metrics.py  test_oracle.py
