[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pareto_screen"]

[project]
name = "pareto-screen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botorch>=0.17.2",
    "chembl-downloader>=0.5.2",
    "pandas>=3.0.2",
    "rdkit>=2025.9.6",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests requiring external data downloads"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
